zip-app/src/ZipForm.css
form {
	margin-top: 15px;
}

label {
	font-family: "Arial", Helvetica, sans-serif;
	font-size: 30px;
}

input{
	height: 33px;
	font-family: "Arial", Helvetica, sans-serif;
	font-size: 20px;
	margin-left: 5px;
	border-color: black;
}


input[type=submit]{
	width: 100px;
	height: 40px;
	background-color: black;
	color: white;
}

input[type=text]{
	padding-left: 10px;
}

.elements-container {
	padding: 10px 20px;
}

